--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,34 @@
 body {
   background: linear-gradient(to right, #ff758c 0%, #ff7eb3 100%);
 }
-.hero {
+.navigation {
   background-color: rgb(242, 0, 161);
-  margin: 0 0 20px;
   padding: 0 20px;
 }
-h2 {
+.logo-img {
+  padding: 20px 12px;
+  width: 170px;
+}
+.hero {
+  background: #ffffff;
+  padding: 80px;
+  margin-left: 0;
+  margin-right: 0;
+  max-width: 100%;
+}
+h2,
+h1 {
   font-family: "Satisfy", cursive;
-  font-size: 36px;
+  font-size: 54px;
 }
 p {
-  font-family: "Hind Vadodara", sans-serif;
+  font-family: "Satisfy", cursive;
+  font-size: 24px;
+  text-align: left;
+}
+.content-info {
+  width: 300px;
+  height: 300px;
 }
 .transparent {
   background-color: rgb(254, 189, 229);
@@ -23,16 +40,11 @@ p {
   width: 300px;
   height: 300px;
 }
-img {
-  padding: 20px 12px;
-  width: 170px;
-}
-.section-headings {
-  text-align: center;
-  color: white;
-  margin-top: 40px;
-  margin-bottom: 40px;
+.album-stats {
 }
 .footer {
-  margin-top: 80px;
+  margin: 80px;
+}
+.footer-text {
+  text-align: center;
 }
